WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23742
applet methods can not return arrays to js
https://bugs.webkit.org/show_bug.cgi?id=23742
Summary
applet methods can not return arrays to js
Andrei Tchijov
Reported
2009-02-04 14:11:18 PST
if applet has methods: public foo[] bar() { ... } public List<foo> baz() { ... } invocation of "bar" method from JS results in "undefined value" (regardless of what "bar" actually returns). invocation of "baz" produce correct value. This works as expected in FF and IE. Does not work in Safari (standard build and nightly as of 02/04/09 )
Attachments
Sample code
(1.04 KB, application/octet-stream)
2009-02-05 08:17 PST
,
Andrei Tchijov
no flags
Details
proposed fix
(3.67 KB, patch)
2010-02-20 01:57 PST
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-02-04 21:32:48 PST
Do you happen to have a test page + applet that we can use to look in to this without having to write one ourselves?
Andrei Tchijov
Comment 2
2009-02-05 08:17:26 PST
Created
attachment 27349
[details]
Sample code FF : produce foo is : Array[3] foo[0] = One bar is : ArrayList bar.get( 0 ) = One Latest WebKit: foo is : undefined bar is : ArrayList bar.get( 0 ) = One
Alexey Proskuryakov
Comment 3
2010-02-20 01:57:09 PST
Created
attachment 49122
[details]
proposed fix
Maciej Stachowiak
Comment 4
2010-02-20 04:36:52 PST
Comment on
attachment 49122
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 5
2010-02-20 10:24:18 PST
Committed <
http://trac.webkit.org/changeset/55054
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug