WebCore/bridge/jni/jsc/JNIBridgeJSC.cpp
@@ -253,7 +253,6 @@ JavaArray::JavaArray(jobject array, const char* type, PassRefPtr<RootObject> roo
     JNIEnv* env = getJNIEnv();
     m_length = env->GetArrayLength(static_cast<jarray>(m_array->m_instance));
     m_type = strdup(type);
-    m_rootObject = rootObject;
 }
 
 JavaArray::~JavaArray()
